add setup status to devices
