# src/main/java/com/bitkulcha/notification_engine/controller/HomeQController.java
@@ -2,6 +2,7 @@ package com.bitkulcha.notification_engine.controller;
 
 
 import com.bitkulcha.notification_engine.api.HomeqApi;
+import com.bitkulcha.notification_engine.domain.enums.DeviceSetupStatusEnum;
 import com.bitkulcha.notification_engine.domain.enums.DeviceTypeEnum;
 import com.bitkulcha.notification_engine.domain.model.DeviceModel;
 import com.bitkulcha.notification_engine.domain.model.HouseModel;
@@ -9,9 +10,11 @@ import com.bitkulcha.notification_engine.domain.model.UserModel;
 import com.bitkulcha.notification_engine.model.CreateDeviceRequestDto;
 import com.bitkulcha.notification_engine.model.CreateHouseRequestDto;
 import com.bitkulcha.notification_engine.model.DeviceDto;
+import com.bitkulcha.notification_engine.model.DeviceSetupStatusDto;
 import com.bitkulcha.notification_engine.model.DeviceTypeDto;
 import com.bitkulcha.notification_engine.model.HouseDetailsDto;
 import com.bitkulcha.notification_engine.model.HouseMemberDto;
+import com.bitkulcha.notification_engine.model.UpdateDeviceRequestDto;
 import com.bitkulcha.notification_engine.service.HomeQService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -46,9 +49,19 @@ public class HomeQController implements HomeqApi {
 
     @Override
     public ResponseEntity<DeviceDto> addDevice(UUID houseId, CreateDeviceRequestDto createDeviceRequest) {
+        DeviceSetupStatusDto setupStatus = createDeviceRequest.getSetupStatus();
         DeviceModel device = homeQService.addDevice(currentUserId(), houseId, createDeviceRequest.getName(),
-                DeviceTypeEnum.valueOf(createDeviceRequest.getType().name()), createDeviceRequest.getStatus());
+                DeviceTypeEnum.valueOf(createDeviceRequest.getType().name()), createDeviceRequest.getStatus(),
+                setupStatus == null ? null : DeviceSetupStatusEnum.valueOf(setupStatus.name()));
         return ResponseEntity.status(HttpStatus.CREATED).body(toDevice(device));
+    }
+
+    @Override
+    public ResponseEntity<DeviceDto> updateDevice(UUID houseId, UUID deviceId, UpdateDeviceRequestDto updateDeviceRequest) {
+        DeviceModel device = homeQService.updateDevice(currentUserId(), houseId, deviceId, updateDeviceRequest.getName(),
+                DeviceTypeEnum.valueOf(updateDeviceRequest.getType().name()),
+                DeviceSetupStatusEnum.valueOf(updateDeviceRequest.getSetupStatus().name()));
+        return ResponseEntity.ok(toDevice(device));
     }
 
     // JwtAuthenticationFilter sets the user id as the principal.
@@ -70,7 +83,8 @@ public class HomeQController implements HomeqApi {
     }
 
     private static DeviceDto toDevice(DeviceModel device) {
-        return new DeviceDto(device.getId().toString(), device.getName(), DeviceTypeDto.fromValue(device.getType().name()))
+        return new DeviceDto(device.getId().toString(), device.getName(), DeviceTypeDto.fromValue(device.getType().name()),
+                DeviceSetupStatusDto.fromValue(device.getSetupStatus().name()))
                 .status(device.getStatus().orElse(null));
     }
 }
